# teloscopy

./: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  Makefile  PSYCHIATRY_KNOWLEDGE_BASE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.sh  test_output.json
.github/workflows/: android-ci.yml  ci.yml
android/: .gitignore  PRIVACY_POLICY.md  README.md  STORE_LISTING.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
android/store-listing/: full-description.txt  privacy-policy.md  short-description.txt
benchmark_results/: BENCHMARKS.md  results.json
ios/: .gitignore  README.md
ios/Teloscopy/: ContentView.swift  Info.plist  TeloscopyApp.swift
ios/Teloscopy.xcodeproj/: project.pbxproj
ios/Teloscopy/Components/: DiseaseRiskCard.swift  MealPlanCard.swift  ShimmerEffect.swift  StatCard.swift
ios/Teloscopy/Models/: APIModels.swift
ios/Teloscopy/Services/: APIService.swift  SettingsStore.swift
ios/Teloscopy/Views/: AnalysisView.swift  HomeView.swift  ProfileAnalysisView.swift  ProfileView.swift  ResultsView.swift  SettingsView.swift
scripts/: build_apk.py  generate_training_data.py  run_benchmarks.py
src/teloscopy/: __init__.py  cli.py
src/teloscopy/agents/: __init__.py  base.py  genomics_agent.py  image_agent.py  improvement_agent.py  nutrition_agent.py  orchestrator.py  report_agent.py
src/teloscopy/analysis/: __init__.py  aging.py  comparison.py  statistics.py
src/teloscopy/clinical/: __init__.py  endpoints.py  trials.py  validation.py
src/teloscopy/data/: training.py
src/teloscopy/facial/: __init__.py  enhanced_predictor.py  image_classifier.py  predictor.py
src/teloscopy/genomics/: __init__.py  advanced_telomere.py  disease_risk.py  drug_targets.py  epigenetic_clock.py  liquid_biopsy.py  multi_omics.py  stela.py
src/teloscopy/integrations/: __init__.py  cds_hooks.py  fhir.py  genotype_import.py  health_llm.py  llm_reports.py  wgs.py
src/teloscopy/ml/: __init__.py  cnn_spot_detector.py
src/teloscopy/nutrition/: __init__.py  diet_advisor.py  health_checkup.py  i18n.py  regional_diets.py
src/teloscopy/platform/: __init__.py  federated.py  mobile_api.py  plugin_system.py  research_tools.py
src/teloscopy/sequencing/: telomere_seq.py
src/teloscopy/telomere/: association.py  pipeline.py  preprocessing.py  synthetic.py  (+3 more)
tests/: test_agents.py  test_clinical_trials.py  test_diet_restrictions.py  test_diet_variety.py  test_disease_risk.py  test_image_validation.py  test_pipeline.py  test_report_parser.py  test_security.py  test_synthetic.py  test_webapp.py
(+89 files in other folders)
