[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teloscopy"
version = "2.0.0"
description = "Multi-agent genomic intelligence platform: telomere analysis, disease risk prediction, and personalized nutrition from qFISH microscopy images"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Teloscopy Contributors"},
]
keywords = ["telomere", "qFISH", "microscopy", "bioinformatics", "image-analysis", "fluorescence", "genomics", "disease-risk", "nutrigenomics", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-image>=0.22",
    "opencv-python-headless>=4.8",
    "tifffile>=2023.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
cellpose = ["cellpose>=3.0"]
sequencing = ["biopython>=1.83", "pysam>=0.22"]
interactive = ["plotly>=5.18", "napari>=0.4"]
webapp = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "aiofiles>=23.2",
]
all = [
    "cellpose>=3.0",
    "biopython>=1.83",
    "pysam>=0.22",
    "plotly>=5.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "aiofiles>=23.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
teloscopy = "teloscopy.cli:main"

[project.urls]
Repository = "https://github.com/Mahesh2023/teloscopy"
Documentation = "https://github.com/Mahesh2023/teloscopy/blob/main/ARCHITECTURE.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"teloscopy.webapp" = ["templates/*.html", "static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
